--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armah Hotel - Menu</title>
-    <link rel="stylesheet" href="STYLE.CSS"> <!-- NOTE: We use /public/... because the server will serve it from there -->
+    <link rel="stylesheet" href="style.css"> <!-- NOTE: We use /public/... because the server will serve it from there -->
 </head>
 <body>
     <div class="container">
